--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "ethers": "^6.11.1",
     "firebase": "^10.9.0",
     "lucide-react": "^0.360.0",
     "nodemailer": "^6.9.13",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
