--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-table": "^8.15.0",
     "axios": "^1.6.8",
+    "bignumber.js": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
@@ -25,7 +26,9 @@
     "lucide-react": "^0.360.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-router-dom": "^6.22.3",
     "stripe": "^14.25.0",
     "tailwind-merge": "^2.2.2",
